--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
+    "input-otp": "^1.4.2",
     "jose": "^6.0.11",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
@@ -27,6 +28,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "sonner": "^2.0.7",
+    "sweetalert2": "^11.23.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.74"
   },
