--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
     "input-otp": "^1.4.2",
@@ -29,6 +30,7 @@
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
     "next": "^15.5.3",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.4",
     "react": "^19.0.0",
