--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.1.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
+    "@mui/x-date-pickers": "^8.11.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -27,10 +32,12 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "export-to-csv": "^1.4.0",
     "framer-motion": "^12.23.0",
     "input-otp": "^1.4.2",
     "jose": "^6.0.11",
     "lucide-react": "^0.525.0",
+    "material-react-table": "^3.2.1",
     "mongoose": "^8.16.1",
     "next": "^15.5.3",
     "next-cloudinary": "^6.16.0",
