--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "entities": "^7.0.0",
     "export-to-csv": "^1.4.0",
     "framer-motion": "^12.23.0",
+    "fuse.js": "^7.1.0",
     "input-otp": "^1.4.2",
     "jose": "^6.0.11",
     "lucide-react": "^0.525.0",
