--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ckeditor/ckeditor5-react": "^11.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@faker-js/faker": "^10.0.0",
     "@hookform/resolvers": "^5.1.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
@@ -25,6 +26,8 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.87.4",
