--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lucide-react": "^0.525.0",
     "material-react-table": "^3.2.1",
     "mongoose": "^8.16.1",
+    "motion": "^12.23.16",
     "next": "^15.5.3",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
