--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@faker-js/faker": "^10.0.0",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.1.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
@@ -47,6 +48,7 @@
     "export-to-csv": "^1.4.0",
     "framer-motion": "^12.23.0",
     "fuse.js": "^7.1.0",
+    "gsap": "^3.13.0",
     "input-otp": "^1.4.2",
     "jose": "^6.0.11",
     "lucide-react": "^0.525.0",
